# wordle_ciotti_lenny

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  pyproject.toml  pytest.ini
docs/source/: conf.py  index.rst
src/wordle_lc3328/: __init__.py  wordle_lc3328.py
tests/: test_wordle_lc3328.py
wordle_lc3328/: README.md
wordle_lc3328/.github/workflows/: ci.yml
wordle_lc3328/docs/: Makefile  conf.py  example.ipynb  make.bat
wordle_lc3328/src/wordle_lc3328/: __init__.py
wordle_lc3328/tests/: test_wordle_lc3328.py
